when map shown button invisible fix

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -185,7 +185,7 @@ body, html {
   flex-direction: column;
   align-items: center;
   margin: 20px 0;
-  margin-top: 30px;
+  margin-top: 0px;
   margin-bottom: -130px;
   z-index: 2;
 }
@@ -226,6 +226,12 @@ body, html {
   align-items: center;
   justify-content: center;
   margin: 20px 0;
+  margin-top: 20px; /* Default margin */
+  transition: margin-top 0.3s ease;
+}
+
+.map-visible .toggle-container {
+  margin-top: -160px; /* Remove margin when map is visible */
 }
 
 .toggle-label {
